# polyglot-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MAINTAINERS.md  README.md  go.mod
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  crates.yml  lint.yml  tests.yml
internal/version/: version.go
pkg/generator/: generator.go  headers.go  imports.go  structs.go
protoc-gen-polyglot-rs/examples/test/: test.proto
protoc-gen-polyglot-rs/internal/version/: version.go
protoc-gen-polyglot-rs/pkg/generator/: defaults.go  generator.go  headers.go  imports.go  structs.go
protoc-gen-polyglot-rs/pkg/utils/: utils.go
protoc-gen-polyglot-rs/templates/: decode.templ  decodeMap.templ  encode.templ  enums.templ  imports.templ  messages.templ  structs.templ
protoc-gen-rs-polyglot/: main.go
resources/test/: generator-test-data.json
src/: decoder.rs  encode.rs  encoder.rs  kind.rs  lib.rs
templates/: decode.templ  encode.templ  imports.templ  messages.templ
tests/: decoder.rs  encoder.rs  generator.rs  integration.rs  tests.rs
