[package]
name = "polyglot"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
base64 = "0.13.0"
num_enum = "0.5.7"