[package]
name = "polyglot_rs"
version = "0.7.0"
edition = "2021"
description="Library used for encoding and decoding data types from a portable byte buffer"
license = "Apache-2.0"
repository = "https://github.com/loopholelabs/polyglot-rs"
readme = "README.md"
keywords = ["polyglot", "serialization", "deserialization", "encoding", "decoding"]
exclude = [
    "**/*.go",
    "**/*.templ",
    "go.mod",
    "go.sum",
]

[lib]
path = "src/lib.rs"

[dependencies]
byteorder = "1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
base64 = "0.21.0"
num_enum = "0.5.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1